--- a/Templates/About.html
+++ b/Templates/About.html
@@ -7,7 +7,7 @@
 
     <script type="text/javascript" src = "/Scripts/script.js"></script>
     <link rel="stylesheet" href="/Style/style.css">
-    <title>About Us</title>
+    <title>About</title>
 
   </head>
 
@@ -36,9 +36,6 @@
         </form>
 
     <div class="wrapperaboutus">
-      <div id="leftaboutus">
-        <div class="container">
-          <img src="/Style/Olivia.jpg" alt=""style="width:360px;height:360px;border-radius:360px;" >
           <div class="overlay">
             <div class="text">
               <p style = "font-size:30px;"></p>
@@ -46,8 +43,6 @@
               <br>  Add expiry date <br>
             </div>
           </div>
-        </div>   
-     </div>
     </div>
   </body>
 </html>
