--- a/Templates/About.html
+++ b/Templates/About.html
@@ -35,7 +35,7 @@
           <p id = "loggedIn">{{username}} is logged in</p>
         </form>
 
-    <div class="wrapperaboutus">
+    <div class="wrapperabout">
           <div class="overlay">
             <div class="text">
               <p style = "font-size:30px;"></p>
